# dilemma-artifact

./: README.md  make_all.sh  run.sh  run_group.sh
benchmarks/clam/atomic/: append_rev_cons_by_append_assoc.v  distrib_by_plus_assoc_1.v  distrib_by_plus_assoc_3.v  distrib_by_plus_commut.v  goal10_by_append_assoc.v  goal10_by_append_nil_1.v  goal10_by_append_nil_2.v  goal10_by_append_rev_cons.v  goal11_by_append_assoc_1.v  goal11_by_append_assoc_2.v  goal11_by_append_nil.v  goal11_by_rev_rev.v  goal11_by_rev_rev_cons.v  goal12_by_append_assoc.v  goal13_by_plus_succ_swap.v  goal15_by_plus_succ_swap_1.v  goal15_by_plus_succ_swap_2.v  goal16_by_even_odd_plus.v  goal17_by_rev_rev_1.v  goal17_by_rev_rev_2.v  goal17_by_rev_rev_3.v  goal18_by_append_assoc_1.v  goal18_by_append_assoc_2.v  goal18_by_append_nil.v  goal19_by_rev_rev_1.v  goal19_by_rev_rev_2.v  goal1_by_plus_succ.v  goal20_by_even_odd_append_len.v  goal21_by_append_assoc_1.v  goal21_by_append_assoc_2.v  goal21_by_append_nil.v  goal22_by_append_nil.v  goal22_by_even_odd_append_len.v  goal23_by_len_append.v  goal26_by_plus_comm.v  goal27_by_append_nil.v  goal27_by_qreva_append.v  goal28_by_append_assoc.v  goal28_by_append_nil_1.v  goal28_by_append_nil_2.v  (+111 more)
benchmarks/lia/atomic/: heap_size_by_le_O_n.v  list_double_rev_by_rev_append.v  list_len_rev_by_len_append.v  list_rev2_append_by_append_single.v  list_rev2_append_by_rev2_append_aux.v  list_rev2_len_by_list_rev2_len_lem.v  list_rev2_len_by_plus_n_0.v  list_rev2_len_lem_by_plus_n_Sm.v  list_rev_append_by_app_assoc.v  list_rev_append_by_app_nil.v  list_rev_append_by_append_assoc.v  list_rev_append_by_append_nil.v  list_rev_append_cons_aux_by_append_assoc_1.v  list_rev_append_cons_aux_by_append_assoc_2.v  list_rev_append_cons_by_append_assoc.v  list_rev_append_cons_by_rev_append_cons_aux.v  list_rev_eq_rev2_by_rev2_append.v  queue_len_by_len_app.v  queue_len_by_len_rev.v  queue_popback_by_len_butlast.v  queue_push_by_len_app_1.v  queue_push_by_len_app_2.v  queue_push_by_len_rev.v  tree_insert_all_by_insert_n_S.v  (+5 more)
benchmarks/vfa_redblack/: source.v
dilemma/: README.md  _CoqProject  dilemma.opam  dune-project
dilemma/examples/: selection_e1.v
dilemma/examples/sample logs/: log_for_selection_e1.txt
dilemma/ocaml_extractions/: Evaluator.ml  Examples.ml  ExtractionUtils.ml  Extractor.ml  Formatting.ml  dune
dilemma/source/: Candidates.ml  CoqCoreFunctions.ml  CoqInterface.ml  Execution.ml  GatherFunctions.ml  Generalize.ml  Log.ml  Masks.ml  Playground.ml  ReduceProof.ml  SynthInterface.ml  Utils.ml  def_tactic.mlg  dune  tactic.ml
dilemma/synthesizer/: Enumerate.ml  FormatSynthesis.ml  SynthUtils.ml  Synthesizer.ml  dune
dilemma/theories/: Dilemma.v  dune
examples/: selection_e2.v
examples/common/: Decide.v  _CoqProject
examples/sample logs/: log_for_selection_e2.txt
testing_scripts/: benchmark_runtimes.txt  change_labels.py  groups.json  groups_updated.json  run.py  target_lemmas.json  test_folders.json  tests.json
(+236 files in other folders)
